# chatbot-widget

./: README.md  docker-compose.yml
client/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  constant.ts  types.ts
client/src/components/: ActionButton.tsx  Ava.tsx  ChatInterface.tsx  ChatMessage.tsx  InputArea.tsx
client/src/services/: api.ts
server/: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml
server/app/: main.py
server/app/controllers/: __init__.py  chat_controller.py
server/app/core/: __init__.py  dependencies.py  error_handlers.py  exceptions.py  middlewares.py  response_models.py
server/app/models/: __init__.py  models.py
server/app/routes/: chat.py
server/app/schemas/: __init__.py  message.py
server/app/services/: chatbot.py
server/data/: chatbot.db
server/tests/: test_api.py  test_chat_controller.py
